# aiofastnet

./: .gitignore  AGENTS.md  HISTORY.rst  MANIFEST.in  README.md  README.rst  SECURITY.md  pyproject.toml  requirements-test.txt  run_benchmark.sh  run_threaded_benchmark.sh  setup.py
.github/workflows/: codspeed.yml  release.yml  run-tests-uv.yml  run-tests.yml
aiofastnet/: __init__.pxd  __init__.py  __init__.pyi  _sslcontext.py  api.py  api_create_connection.py  api_create_datagram_endpoint.py  api_create_server.py  api_create_unix_connection.py  api_create_unix_server.py  api_patch.py  api_sendfile.py  api_start_tls.py  api_streams.py  api_utils.py  certdecode.c  constants.py  openssl.pxd  openssl_bundled.c  openssl_compat.c  openssl_compat.h  openssl_compat.py  socket.pxd  ssl_engine.pxd  ssl_engine.pyx  ssl_engine_direct.pxd  ssl_engine_direct.pyx  ssl_engine_fallback.pxd  ssl_engine_fallback.pyx  ssl_object.pxd  ssl_object.pyx  ssl_protocol.pyx  ssl_transport.pyx  sslproto.pxd  sslproto.pyx  sslproto_stdlib.pxd  static_mem_bio.c  static_mem_bio.h  system.pxd  tls_transport.pyx  (+12 more)
benchmarks/: __init__.py  test_echo_benchmarks.py
examples/: aiohttp_ktls_fileresponse.py  aiohttp_speedup.py  aiohttp_ws_speedup.py  benchmark-ft.py  benchmark.py  benchmark_protocol.py  benchmark_protocol.pyx  benchmark_threaded.py  echo_client_threaded.py  echo_server_threaded.py  utils.py
notes/: ktls_bio_plan.md
scripts/: build_openssl.sh
tests/: conftest.py  pytest_plugin.py  test.crt  test_api.py  test_basics.py  test_benchmarks.py  test_datagram.py  test_echo_benchmarks.py  test_patch.py  test_protocol_error.py  test_smoke.py  test_ssl_engine.py  test_ssl_object.py  test_ssl_transport.py  test_streams.py  test_threading.py  test_typing.py  utils.py
tests/typing/: public_api.py
