[project]
name = "aiofastnet"
description = "Fast transport/protocol networking for asyncio"
authors = [{name = "Taras Kozlov", email = "tarasko.projects@gmail.com"}]
requires-python = '>=3.9'
readme = "README.md"
license-files = ["LICENSE"]
dynamic = ["version", "dependencies"]
keywords = ["asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Cython",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Networking"
]

[build-system]
requires = ["setuptools >= 78.0", "wheel", "Cython >= 3.2"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/tarasko/aiofastnet"
Repository = "https://github.com/tarasko/aiofastnet"
Issues = "https://github.com/tarasko/aiofastnet/issues"
Documentation = "https://aiofastnet.readthedocs.io/en/latest"

[tool.setuptools]
packages = ["aiofastnet"]
package-data = {aiofastnet = ["*.pyi", "py.typed"]}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "aiofastnet.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
files = ["tests/typing/public_api.py"]
follow_imports = "silent"
strict = true

[tool.ruff]
line-length = 150
target-version = "py39"

[tool.coverage.run]
source = ["aiofastnet"]
branch = true
plugins = ["Cython.Coverage"]
core = "ctrace"
omit = [
    "aiofastnet/api_create_connection.py",
    "aiofastnet/api_create_datagram_endpoint.py",
    "aiofastnet/api_create_unix_connection.py",
    "aiofastnet/api_create_server.py",
    "aiofastnet/api_create_unix_server.py",
    "aiofastnet/api_sendfile.py",
    "aiofastnet/api_start_tls.py",
    "aiofastnet/api_utils.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise MemoryError",
    "assert False"
]
